Fixed the white spacing in the navbar-menu

--- a/bulma-0.8.0/bulma-0.8.0/css/bulma.css
+++ b/bulma-0.8.0/bulma-0.8.0/css/bulma.css
@@ -7280,7 +7280,7 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
   .navbar-menu {
     background-color: white;
     box-shadow: 0 8px 16px rgba(10, 10, 10, 0.1);
-    padding: 0.5rem 0;
+    /* padding: 0.5rem 0; */
   }
   .navbar-menu.is-active {
     display: block;
